[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hitmictools"
version = "0.5.13"
description = "Tools for high-throughput microscopy image analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "EUPL-1.2"}
authors = [
    {name = "Santiago Cano-Muñiz", email = "santiago.cano-muniz@unibas.ch"}
]
keywords = ["microscopy", "image-analysis", "deep-learning", "cell-segmentation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26,<2",
    "torch>=2.4,<2.7",
    "torchvision>=0.19,<0.22",
    "matplotlib>=3.9,<3.10",
    "seaborn>=0.13,<0.14",
    "pandas>=2.3,<2.4",
    "scikit-learn>=1.6,<1.7",
    "scikit-image>=0.24,<0.25",
    "scipy>=1.13,<1.14",
    "tifffile>=2024.8,<2025.0",
    "monai>=1.5,<1.6",
    "templatematchingpy>=1.0.3,<1.1",
    "psutil>=5.9,<8",
    "nd2>=0.10,<0.11",
    "opencv-python>=4.10,<4.12",
    "ome-types>=0.6,<0.7",
    "pyyaml>=6.0,<6.1",
    "joblib>=1.5,<1.6",
    "hyperactive==4.8.0",
    "gradient-free-optimizers==1.7.2",
    "jax==0.4.23",
    "jaxlib==0.4.23",
    "basicpy @ git+https://github.com/BoeckLab/BaSiCPy_scm.git@c1eb6283508ac31f0206069e497bb13b11d0b4b6",
    "jetraw-tools @ git+https://github.com/BoeckLab/jetraw_tools.git@9ebbae2908dbba72074ccc024a7962be744df30f",
    "onnxruntime>=1.19,<1.20",
    "skl2onnx>=1.19,<1.20",
]

[project.urls]
"Homepage" = "https://github.com/queraltmartinsaladich/HiTMicTools"
"Bug Tracker" = "https://github.com/queraltmartinsaladich/HiTMicTools/issues"

[project.scripts]
hitmictools = "HiTMicTools.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Static assets that ship inside the installed package. The CellAsic
# ID-block template is loaded via importlib.resources at runtime; if it
# isn't declared here, building a wheel for Scicore strips it.
"HiTMicTools.img_processing.cellasic.templates" = ["*.png"]

[project.optional-dependencies]
bacdetr = [
    "bacdetr @ git+https://github.com/BoeckLab/BacDETRSegm.git@develop#subdirectory=bacdetr",
]
btrack = [
    "btrack>=0.7,<0.8",
]
rfdetr = [
    "rfdetr>=1.3,<1.4",
]
cuda = [
    "cupy-cuda11x; platform_system != 'Darwin'",
    "cudf; platform_system != 'Darwin'",
    "cucim; platform_system != 'Darwin'",
]
